# computer-graphics

./: README.md
lab1/: Cargo.toml
lab1/src/: geo.rs  main.rs
lab10/: Cargo.toml
lab10/src/: main.rs
lab10/src/logic/: utils.rs
lab2/: Cargo.toml
lab2/src/: logic.rs  main.rs
lab3/: Cargo.toml
lab3/src/: main.rs
lab3/src/logic/: algo.rs  mod.rs  utils.rs  windows.rs
lab4/: Cargo.toml
lab4/src/: main.rs
lab4/src/logic/: algorithms.rs  mod.rs  utils.rs  windows.rs
lab5/: Cargo.toml
lab5/src/: main.rs
lab5/src/logic/: utils.rs
lab6/: Cargo.toml
lab6/src/: main.rs
lab6/src/logic/: utils.rs
lab7/: Cargo.toml
lab7/src/: main.rs
lab7/src/logic/: utils.rs
lab8/: Cargo.toml
lab8/src/: main.rs
lab8/src/logic/: utils.rs
lab9/: Cargo.toml
lab9/src/: main.rs
lab9/src/logic/: utils.rs  windows.rs
